--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,5 @@
-# Server Properties
-server.port = 8080
-server.servlet.context-path = /community
-# thymeleafProperties
-spring.thymeleaf.cache = false
+# profile
+spring.profiles.active=produce
 
-# DataSourceProperties
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
-spring.datasource.username=root
-spring.datasource.password=lane
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.maximum-pool-size=15
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-
-# MybatisProperties
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.cj.community.entity
-mybatis.configuration.useGeneratedKeys=true
-mybatis.configuration.mapUnderscoreToCamelCase=true
-
-# logger
-#logging.level.com.cj.community=debug
-#logging.file=E:/study/work/data/cj/community.log
-
+# logback
+logging.config=classpath:logback-spring-${spring.profiles.active}.xml
